Bug 416175 - dock settings window is not applying "dialogs/background" shadows
Summary: dock settings window is not applying "dialogs/background" shadows
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Plasma
Component: application (show other bugs)
Version: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-12 17:41 UTC by Michail Vourlakos
Modified: 2020-01-12 19:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In: 0.9.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michail Vourlakos 2020-01-12 17:41:32 UTC
even though dialog settings window is drawing as background "dialogs/background" the shadows applied to it through PanelShadows singleton class is
"widgets/panel-background". This could result in misplaced shadows as described at: https://github.com/PapirusDevelopmentTeam/materia-kde/issues/71
Comment 1 Michail Vourlakos 2020-01-12 19:59:15 UTC
Git commit 9e78fab4cec5cfa59231f03c3d1bfe645fb965a2 by Michail Vourlakos.
Committed on 12/01/2020 at 19:20.
Pushed by mvourlakos into branch 'master'.

apply proper shadows for dock settings window

--copy and use plasmaquick/dialogshadow class from
plasma framework library
FIXED-IN:0.9.8

M  +0    -1    app/view/indicator/indicator.cpp
M  +1    -0    app/view/settings/CMakeLists.txt
A  +747  -0    app/view/settings/dialogshadows.cpp     [License: LGPL]
A  +64   -0    app/view/settings/dialogshadows_p.h     [License: LGPL]
M  +5    -3    app/view/settings/primaryconfigview.cpp
M  +5    -3    app/view/settings/secondaryconfigview.cpp

https://commits.kde.org/latte-dock/9e78fab4cec5cfa59231f03c3d1bfe645fb965a2