apply proper shadows for dock settings window

--copy and use plasmaquick/dialogshadow class from
plasma framework library

BUG:416175
FIXED-IN:0.9.8