app/view/indicator/indicator.cpp
@@ -329,7 +329,6 @@ void Indicator::configUiFor(QString type, QQuickItem *parent)
         delete m_lastCreatedConfigUi;
         m_lastCreatedConfigUi = nullptr;
     }
-    auto prevConfigUi = m_lastCreatedConfigUi;
 
     KPluginMetaData metadata;
 
